# C-practice-

./: 1.cpp  2-01.c  2-01.cpp  2-04.cpp  2-05.cpp  2-06.cpp  2-07.cpp  2-08.cpp  2-09.cpp  2-10.cpp  2-11.cpp  2-13.cpp  2-14.cpp  2-4-1.cpp  2-4-2.cpp  2-4-3.cpp  2-4-4.cpp  2-4-5.cpp  2-4-6.cpp  2-5-1.cpp  2-5-2.cpp  2-5-3.cpp  2-5-4.cpp  3.06.cpp  3.08.cpp  3.17.cpp  3.21.cpp  3.24.cpp  3.31.cpp  3.32.cpp  3.33.cpp  3.34.cpp  3.cpp  3_05.cpp  4.1.cpp  4.2.cpp  4.3.cpp  4.4.cpp  4.5.cpp  4.cpp  (+22 more)
