cmake_minimum_required(VERSION 3.15)
project(C___hw)

set(CMAKE_CXX_STANDARD 14)

add_executable( a 2-01.cpp )

add_executable( b 2-01.c )

add_executable( c 2-04.cpp)

add_executable( d 2-05.cpp)

add_executable( e 2-06.cpp)

add_executable( f 2-07.cpp)

add_executable( g 2-08.cpp)

add_executable( h 2-09.cpp)

add_executable( i 2-10.cpp)

add_executable( k 2-11.cpp)

add_executable( l 2-13.cpp)

add_executable( m  2-14.cpp)



