cmake_minimum_required(VERSION 3.15)
project(C___hw)

set(CMAKE_CXX_STANDARD 14)

add_executable( a 2-01.cpp )

add_executable( b 2-01.c )

add_executable( c 2-04.cpp)

add_executable( d 2-05.cpp)

add_executable( e 2-06.cpp)

add_executable( f 2-07.cpp)

add_executable( g 2-08.cpp)

add_executable( h 2-09.cpp)

add_executable( i 2-10.cpp)

add_executable( k 2-11.cpp)

add_executable( l 2-13.cpp)

add_executable( m  2-14.cpp)

add_executable(1 2-4-2.cpp)
add_executable( 2 2-4-1.cpp)
add_executable(3 2-4-3.cpp )
add_executable(4 2-4-4.cpp )
add_executable(5 2-4-5.cpp)
add_executable(6 2-4-6.cpp)
add_executable(11 2-5-1.cpp)
add_executable(22 2-5-2.cpp)
add_executable(33 2-5-3.cpp)
add_executable(44 2-5-4.cpp)